; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_rand-primegen.c_doit4.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_rand-primegen.c_doit4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@B = common dso_local global i64 0, align 8
@two = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i64, i32)* @doit4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @doit4(i32* %0, i64 %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %15 = load i64, i64* %6, align 8
  %16 = load i64, i64* %6, align 8
  %17 = add nsw i64 %16, %15
  store i64 %17, i64* %6, align 8
  %18 = load i64, i64* %6, align 8
  %19 = add nsw i64 %18, 15
  store i64 %19, i64* %6, align 8
  %20 = load i64, i64* %7, align 8
  %21 = add nsw i64 %20, 15
  store i64 %21, i64* %7, align 8
  %22 = load i32, i32* %8, align 4
  %23 = add nsw i32 %22, 1000000000
  store i32 %23, i32* %8, align 4
  br label %24

24:                                               ; preds = %27, %4
  %25 = load i32, i32* %8, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %35

27:                                               ; preds = %24
  %28 = load i64, i64* %6, align 8
  %29 = load i32, i32* %8, align 4
  %30 = sext i32 %29 to i64
  %31 = add nsw i64 %30, %28
  %32 = trunc i64 %31 to i32
  store i32 %32, i32* %8, align 4
  %33 = load i64, i64* %6, align 8
  %34 = add nsw i64 %33, 30
  store i64 %34, i64* %6, align 8
  br label %24

35:                                               ; preds = %24
  %36 = load i32, i32* %8, align 4
  %37 = sub nsw i32 %36, 1000000000
  store i32 %37, i32* %8, align 4
  %38 = load i32, i32* %8, align 4
  %39 = sext i32 %38 to i64
  store i64 %39, i64* %11, align 8
  br label %40

40:                                               ; preds = %44, %35
  %41 = load i64, i64* %11, align 8
  %42 = load i64, i64* @B, align 8
  %43 = icmp slt i64 %41, %42
  br i1 %43, label %44, label %50

44:                                               ; preds = %40
  %45 = load i64, i64* %6, align 8
  %46 = load i64, i64* %11, align 8
  %47 = add nsw i64 %46, %45
  store i64 %47, i64* %11, align 8
  %48 = load i64, i64* %6, align 8
  %49 = add nsw i64 %48, 30
  store i64 %49, i64* %6, align 8
  br label %40

50:                                               ; preds = %40
  br label %51

51:                                               ; preds = %109, %50
  %52 = load i64, i64* %6, align 8
  %53 = sub nsw i64 %52, 30
  store i64 %53, i64* %6, align 8
  %54 = load i64, i64* %6, align 8
  %55 = icmp sle i64 %54, 15
  br i1 %55, label %56, label %57

56:                                               ; preds = %51
  ret void

57:                                               ; preds = %51
  %58 = load i64, i64* %6, align 8
  %59 = load i64, i64* %11, align 8
  %60 = sub nsw i64 %59, %58
  store i64 %60, i64* %11, align 8
  br label %61

61:                                               ; preds = %64, %57
  %62 = load i64, i64* %11, align 8
  %63 = icmp slt i64 %62, 0
  br i1 %63, label %64, label %70

64:                                               ; preds = %61
  %65 = load i64, i64* %7, align 8
  %66 = load i64, i64* %11, align 8
  %67 = add nsw i64 %66, %65
  store i64 %67, i64* %11, align 8
  %68 = load i64, i64* %7, align 8
  %69 = add nsw i64 %68, 30
  store i64 %69, i64* %7, align 8
  br label %61

70:                                               ; preds = %61
  %71 = load i64, i64* %11, align 8
  store i64 %71, i64* %9, align 8
  %72 = load i64, i64* %7, align 8
  store i64 %72, i64* %10, align 8
  br label %73

73:                                               ; preds = %77, %70
  %74 = load i64, i64* %11, align 8
  %75 = load i64, i64* @B, align 8
  %76 = icmp slt i64 %74, %75
  br i1 %76, label %77, label %109

77:                                               ; preds = %73
  %78 = load i64, i64* %11, align 8
  %79 = trunc i64 %78 to i32
  store i32 %79, i32* %13, align 4
  %80 = load i64, i64* %11, align 8
  %81 = trunc i64 %80 to i32
  store i32 %81, i32* %12, align 4
  %82 = load i32, i32* %13, align 4
  %83 = ashr i32 %82, 5
  store i32 %83, i32* %13, align 4
  %84 = load i32, i32* %12, align 4
  %85 = and i32 %84, 31
  store i32 %85, i32* %12, align 4
  %86 = load i64, i64* %7, align 8
  %87 = load i64, i64* %11, align 8
  %88 = add nsw i64 %87, %86
  store i64 %88, i64* %11, align 8
  %89 = load i64, i64* %7, align 8
  %90 = add nsw i64 %89, 30
  store i64 %90, i64* %7, align 8
  %91 = load i32*, i32** %5, align 8
  %92 = load i32, i32* %13, align 4
  %93 = sext i32 %92 to i64
  %94 = getelementptr inbounds i32, i32* %91, i64 %93
  %95 = load i32, i32* %94, align 4
  store i32 %95, i32* %14, align 4
  %96 = load i32*, i32** @two, align 8
  %97 = load i32, i32* %12, align 4
  %98 = sext i32 %97 to i64
  %99 = getelementptr inbounds i32, i32* %96, i64 %98
  %100 = load i32, i32* %99, align 4
  store i32 %100, i32* %12, align 4
  %101 = load i32, i32* %12, align 4
  %102 = load i32, i32* %14, align 4
  %103 = xor i32 %102, %101
  store i32 %103, i32* %14, align 4
  %104 = load i32, i32* %14, align 4
  %105 = load i32*, i32** %5, align 8
  %106 = load i32, i32* %13, align 4
  %107 = sext i32 %106 to i64
  %108 = getelementptr inbounds i32, i32* %105, i64 %107
  store i32 %104, i32* %108, align 4
  br label %73

109:                                              ; preds = %73
  %110 = load i64, i64* %9, align 8
  store i64 %110, i64* %11, align 8
  %111 = load i64, i64* %10, align 8
  store i64 %111, i64* %7, align 8
  br label %51
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
